--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                         <h3>Manufacturing</h3>
                     </div>
                     <div>
-                        <p>We offer services that include industry specific platforms, solutions and services which addresses performance and operational excellence through to digital twin. We are able to run these solution in our clients offices or remotely due to our unique knowledge in cloud services.</p>
+                        <p>We offer services that include industry specific platforms, solutions and services which addresses performance and operational excellence through to digital twin. </p>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -103,7 +103,7 @@
                         <h3>Automation</h3>
                     </div>
                     <div>
-                        <p>We offer services that include industry specific platforms, solutions and services which addresses performance and operational excellence through to digital twin. We are able to run these solution in our clients offices or remotely due to our unique knowledge in cloud services.</p>
+                        <p>We offer services that include industry specific platforms, solutions and services which addresses performance and operational excellence through to digital twin. </p>
                     </div>
                 </div>
                 <div class="col-md-4">
@@ -114,7 +114,7 @@
                         <h3>Integration</h3>
                     </div>
                     <div>
-                        <p>We offer services that include industry specific platforms, solutions and services which addresses performance and operational excellence through to digital twin. We are able to run these solution in our clients offices or remotely due to our unique knowledge in cloud services.</p>
+                        <p>We offer services that include industry specific platforms, solutions and services which addresses performance and operational excellence through to digital twin. </p>
                     </div>
                 </div>
 
@@ -219,17 +219,13 @@
 </div>
 
 
-
-
-
-
 <footer>
     <div class="section-container footer-container">
         <div class="container">
             <div class="row">
                     <div class="col-md-4">
                         <h4>About us</h4>
-                        <p>Accurata is an experienced Industrial Automation and Manufacturing Execution Systems expert. We boast more than a decade of experience as an Endorsed Wonderware System Integrator Partner and have successfully completed more than 1000 projects all over the world.</p>
+                        <p>Accurata x3 is the unique Nigerian Endorsed SI. Furthermore we are trying to become , a member of several international associations aimed to develop the system integration field and enhance operations performance including: CSIA (Control System Integrator Association), MESA (Manufacturing Enterprise Solutions Association) and Automation Alliance Group.</p>
                     </div>
 
                     <div class="col-md-4">
