--- a/contact.html
+++ b/contact.html
@@ -119,7 +119,7 @@
 </div>
 
 
-<footer>
+<!-- <footer>
     <div class="section-container footer-container">
         <div class="container">
             <div class="row">
@@ -161,6 +161,55 @@
             </div>
         </div>
     </div>
+</footer> -->
+
+<footer>
+  <div class="section-container footer-container">
+      <div class="container">
+          <div class="row">
+                  <div class="col-md-4">
+                      <h4>About us</h4>
+                      <p>Accurata is an experienced Industrial Automation and Manufacturing Execution Systems expert. We boast more than a decade of experience as an Endorsed Wonderware System Integrator Partner and have successfully completed more than 1000 projects all over the world.</p>
+                  </div>
+
+                  <div class="col-md-4">
+                      <h4>Get in touch</h4>
+                      <p>
+                          <a href="https://facebook.com/" class="social-round-icon white-round-icon fa-icon" title="">
+                          <i class="fa fa-facebook" aria-hidden="true"></i>
+                        </a>
+                        <a href="https://twitter.com/" class="social-round-icon white-round-icon fa-icon" title="">
+                          <i class="fa fa-twitter" aria-hidden="true"></i>
+                        </a>
+                        <a href="https://www.linkedin.com/" class="social-round-icon white-round-icon fa-icon" title="">
+                          <i class="fa fa-linkedin" aria-hidden="true"></i>
+                        </a>
+                      </p>
+                      <!-- <p><small>© Untitled | Website created with <a href="http://www.mashup-template.com/" class="link-like-text" title="Create website with free html template">Mashup Template</a>/<a href="http://www.unsplash.com/" class="link-like-text" title="Beautiful Free Images">Unsplash</a></small></p>     -->
+                  </div>
+
+                  <div class="col-md-4">
+                      <h4>Contact Address:</h4>
+                      <p>Block 86 Plot 24
+                          Chief Collins Uchidiuno Street, Lekki Phase 1, Eti-osa, Lagos
+                          </p>
+                      <p>Email: moye.ojuroye@accuratax3.com</p>
+                      <p>Phone: +2348171218610 </p>
+                      
+                      <!-- <div class="form-group">
+                          <div class="input-group">
+                              <input type="text" class="form-control footer-input-text">
+                              <div class="input-group-btn">
+                                  <button type="button" class="btn btn-primary btn-newsletter ">OK</button>
+                              </div>
+                          </div>
+                      </div> -->
+
+
+                  </div>
+          </div>
+      </div>
+  </div>
 </footer>
 
 <script>
