--- a/automation.html
+++ b/automation.html
@@ -41,12 +41,12 @@
         <ul class="nav navbar-nav navbar-right">
           <li><a href="./index.html" title="" class="active">Home</a></li>
           <li><a href="./automation.html" title="">Automation</a></li>
-          <!-- <li><a href="./pricing.html" title=""> Manufacturing</a></li>
+          <!-- <li><a href="./pricing.html" title=""> Manufacturing</a></li> -->
           <li><a href="./contact.html" title="">Contact</a></li>
-          <li><a href="./components.html" title="">Components</a></li> -->
-          <li>
-            <!-- <p><a href="./download.html" class="btn btn-primary navbar-btn" title="">Download</a></p> -->
-          </li>
+          <!-- <li><a href="./components.html" title="">Components</a></li> -->
+          <!-- <li>
+            <p><a href="./download.html" class="btn btn-primary navbar-btn" title="">Download</a></p>
+          </li> -->
           
         </ul>
       </div>
