--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
         <ul class="nav navbar-nav navbar-right">
           <li><a href="./index.html" title="" class="active">Home</a></li>
           <li><a href="./automation.html" title="">Automation</a></li>
-          <!-- <li><a href="./pricing.html" title="">Manufacturing</a></li>
+          <!-- <li><a href="./pricing.html" title="">Manufacturing</a></li> -->
           <li><a href="./contact.html" title="">Contact</a></li>
-          <li><a href="./components.html" title="">Components</a></li> -->
-          <li>
-            <!-- <p><a href="./download.html" class="btn btn-primary navbar-btn" title="">Download</a></p> -->
-          </li>
+          <!-- <li><a href="./components.html" title="">Components</a></li> -->
+          <!-- <li>
+            <p><a href="./download.html" class="btn btn-primary navbar-btn" title="">Download</a></p>
+          </li> -->
           
         </ul>
       </div>
@@ -64,9 +64,7 @@
             <div class="col-md-6">
                 <h1>Accurata X3</h1>
                 <p style="color: white;">We assist our clients to push beyond single site industry 4.0 digitization efforts and optimize the 
-                    entirety of production, interconnected workforce and supply value chain network. To gain the market 
-                    control and the visibility needed. Our effort is to help boost efficiency, flexibility and safety in 
-                    order to survive economic, environmental and regulatory pressure.</p>
+                    entirety of production, interconnected workforce and supply value chain network.</p>
                  <a href="./contact.html" title="" class="btn btn-lg btn-primary">Contact Us</a>
             </div>
 
