--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <link href="./assets/apple-touch-icon.png" rel="apple-touch-icon">
   <link href="./assets/favicon.ico" rel="icon">
 
-  <title>Accurata</title>  
+  <title>Accurata X3</title>  
 
 <link href="./main.a3f694c0.css" rel="stylesheet"></head>
 
@@ -28,7 +28,7 @@
       <div class="navbar-header">
         <button type="button" class="navbar-toggle uarr collapsed" data-toggle="collapse" data-target="#navbar-collapse-uarr">
           <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar">Hello</span>
+          <span class="icon-bar"></span>
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
