--- a/automation.html
+++ b/automation.html
@@ -15,7 +15,7 @@
   <link href="./assets/apple-touch-icon.png" rel="apple-touch-icon">
   <link href="./assets/favicon.ico" rel="icon">
 
-  <title>Title page</title>  
+  <title>Accurata X3</title>  
 
 <link href="./main.a3f694c0.css" rel="stylesheet"></head>
 
