--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
 
  
 
-  <title>Title page</title>  
+  <title>Accurata X3</title>  
 
 <link href="./main.a3f694c0.css" rel="stylesheet"></head>
 
