--- a/automation.html
+++ b/automation.html
@@ -41,7 +41,8 @@
         <ul class="nav navbar-nav navbar-right">
           <li><a href="./index.html" title="" class="active">Home</a></li>
           <li><a href="./automation.html" title="">Automation</a></li>
-          <!-- <li><a href="./pricing.html" title=""> Manufacturing</a></li> -->
+          <!-- <li><a href="./engineering.html" title="">Engineering</a></li> -->
+          <li><a href="./manufacturing.html" title=""> Manufacturing</a></li>
           <li><a href="./contact.html" title="">Contact</a></li>
           <!-- <li><a href="./components.html" title="">Components</a></li> -->
           <!-- <li>
@@ -111,7 +112,7 @@
               <div class="container">
                   <div class="row">                   
                       <div class="col-md-7">
-                          <img class="img-responsive" src="./assets/images/Manufacturing.jpeg" alt="">
+                          <img class="img-responsive" src="./assets/images/Unified Operation Center.jpeg" alt="">
                       </div>
           
                       <div class="col-md-5">
@@ -179,17 +180,24 @@
                   </div>
 
                   <div class="col-md-4">
-                      <h4>Get in touch</h4>
+                      <h4>Follow Us</h4>
                       <p>
-                          <a href="https://facebook.com/" class="social-round-icon white-round-icon fa-icon" title="">
+                          <a href="https://web.facebook.com/profile.php?id=100082332073019" class="social-round-icon white-round-icon fa-icon" title="">
                           <i class="fa fa-facebook" aria-hidden="true"></i>
                         </a>
-                        <a href="https://twitter.com/" class="social-round-icon white-round-icon fa-icon" title="">
-                          <i class="fa fa-twitter" aria-hidden="true"></i>
-                        </a>
+                        Accurata Xthree
+                      </p>
+                      <p>
+                          <a href="https://twitter.com/" class="social-round-icon white-round-icon fa-icon" title="">
+                              <i class="fa fa-twitter" aria-hidden="true"></i>
+                          </a>
+                          Accurata_x3
+                      </p>
+                       <p>
                         <a href="https://www.linkedin.com/" class="social-round-icon white-round-icon fa-icon" title="">
                           <i class="fa fa-linkedin" aria-hidden="true"></i>
                         </a>
+                        Accurata
                       </p>
                       <!-- <p><small>© Untitled | Website created with <a href="http://www.mashup-template.com/" class="link-like-text" title="Create website with free html template">Mashup Template</a>/<a href="http://www.unsplash.com/" class="link-like-text" title="Beautiful Free Images">Unsplash</a></small></p>     -->
                   </div>
@@ -210,13 +218,12 @@
                               </div>
                           </div>
                       </div> -->
-
-
                   </div>
           </div>
       </div>
   </div>
 </footer>
+
 
 <script>
   document.addEventListener("DOMContentLoaded", function (event) {
