--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
         <ul class="nav navbar-nav navbar-right">
           <li><a href="./index.html" title="" class="active">Home</a></li>
           <li><a href="./automation.html" title="">Automation</a></li>
-          <!-- <li><a href="./pricing.html" title="">Manufacturing</a></li> -->
-          <li><a href="./contact.html" title="">Contact</a></li>
+          <!-- <li><a href="./engineering.html" title="">Engineering</a></li> -->
+          <li><a href="./manufacturing.html" title="">Manufacturing</a></li>
+          <li><a href="./contact.html" title="">Contact Us</a></li>
           <!-- <li><a href="./components.html" title="">Components</a></li> -->
           <!-- <li>
             <p><a href="./download.html" class="btn btn-primary navbar-btn" title="">Download</a></p>
@@ -82,40 +83,49 @@
                     </div>
                 </div>
 
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class="fa-container">
                         <i class="fa fa-comment-o fa-3x" aria-hidden="true"></i>
                     </div>
                     <div class="text-center">
-                        <h3>Manufacturing</h3>
+                        <h3>Simulation</h3>
                     </div>
                     <div>
-                        <p>We offer services that include industry specific platforms, solutions and services which addresses performance and operational excellence through to digital twin. </p>
+                        <p>Simulation tools for process design and simulation</p>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class="fa-container">
                         <i class="fa fa-heart-o fa-3x" aria-hidden="true"></i>
                     </div>
                     <div class="text-center">
-                        <h3>Automation</h3>
+                        <h3>Engineering</h3>
                     </div>
                     <div>
-                        <p>We offer services that include industry specific platforms, solutions and services which addresses performance and operational excellence through to digital twin. </p>
+                        <p>Data management tools (Engineering Data Warehouse, Intelligent P&IDs, E&I Deliverables...) to efficiently control, collaborate and produce multi-discplinary engineering data and asset deliverables</p>
                     </div>
                 </div>
-                <div class="col-md-4">
+                <div class="col-md-3">
                     <div class="fa-container">
                         <i class="fa fa-bell-o fa-3x" aria-hidden="true"></i>
                     </div>
                     <div class="text-center">
-                        <h3>Integration</h3>
+                        <h3>Design</h3>
                     </div>
                     <div>
-                        <p>We offer services that include industry specific platforms, solutions and services which addresses performance and operational excellence through to digital twin. </p>
+                        <p>Evergreen multi-discplinary 3D Model of the plant enabling rapidly generation accurate drawings and reports for both greenfield and browfield capital projects </p>
                     </div>
                 </div>
-
+                <div class="col-md-3">
+                    <div class="fa-container">
+                        <i class="fa fa-comment-o fa-3x" aria-hidden="true"></i>
+                    </div>
+                    <div class="text-center">
+                        <h3>Execution</h3>
+                    </div>
+                    <div>
+                        <p>Enhanced process governance, best-in-class change management, and data-centric construction planning and execution.</p>
+                </div>
             </div>
     </div>
 </div>
@@ -227,17 +237,24 @@
                     </div>
 
                     <div class="col-md-4">
-                        <h4>Get in touch</h4>
+                        <h4>Follow Us</h4>
                         <p>
-                            <a href="https://facebook.com/" class="social-round-icon white-round-icon fa-icon" title="">
+                            <a href="https://web.facebook.com/profile.php?id=100082332073019" class="social-round-icon white-round-icon fa-icon" title="">
                             <i class="fa fa-facebook" aria-hidden="true"></i>
                           </a>
-                          <a href="https://twitter.com/" class="social-round-icon white-round-icon fa-icon" title="">
-                            <i class="fa fa-twitter" aria-hidden="true"></i>
-                          </a>
+                          Accurata Xthree
+                        </p>
+                        <p>
+                            <a href="https://twitter.com/" class="social-round-icon white-round-icon fa-icon" title="">
+                                <i class="fa fa-twitter" aria-hidden="true"></i>
+                            </a>
+                            Accurata_x3
+                        </p>
+                         <p>
                           <a href="https://www.linkedin.com/" class="social-round-icon white-round-icon fa-icon" title="">
                             <i class="fa fa-linkedin" aria-hidden="true"></i>
                           </a>
+                          Accurata
                         </p>
                         <!-- <p><small>© Untitled | Website created with <a href="http://www.mashup-template.com/" class="link-like-text" title="Create website with free html template">Mashup Template</a>/<a href="http://www.unsplash.com/" class="link-like-text" title="Beautiful Free Images">Unsplash</a></small></p>     -->
                     </div>
