--- a/manufacturing.html
+++ b/manufacturing.html
@@ -42,15 +42,16 @@
       <div class="collapse navbar-collapse" id="navbar-collapse-uarr">
         <ul class="nav navbar-nav navbar-right">
           <li><a href="./index.html" title="" class="active">Home</a></li>
-          <li><a href="./about.html" title=""> About</a></li>
-          <li><a href="./pricing.html" title=""> Pricing </a></li>
+          <li><a href="./automation.html" title=""> Automation</a></li>
+          <!-- <li><a href="./engineering.html" title="">Engineering</a></li> -->
+          <li><a href="./manufacturing.html" title="">Manufacturing</a></li>
           <li><a href="./contact.html" title="">Contact</a></li>
-          <li><a href="./components.html" title="">Components</a></li>
-          <li>
+          <!-- <li><a href="./components.html" title="">Components</a></li> -->
+          <!-- <li>
             <p>
               <a href="./download.html" class="btn btn-primary navbar-btn" title="">Download</a>
             </p>
-          </li>
+          </li> -->
           
         </ul>
       </div>
@@ -66,7 +67,7 @@
         <div class="row section-container-spacer">
             <div class="col-xs-12">
                 <div class="text-center">
-                    <h1>Pricing</h1>
+                    <h1>Manufacturing</h1>
                 </div>
                 <div class="col-md-8 col-md-offset-2">
                     <p>Adipiscing vitae proin sagittis nisl rhoncus mattis. Bibendum enim facilisis gravida neque convallis
