--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           <li><a href="./index.html" title="" class="active">Home</a></li>
           <li><a href="./automation.html" title="">Automation</a></li>
           <!-- <li><a href="./engineering.html" title="">Engineering</a></li> -->
-          <li><a href="./manufacturing.html" title="">Manufacturing</a></li>
+          <li><a href="./integration.html" title="">Integration</a></li>
           <li><a href="./contact.html" title="">Contact Us</a></li>
           <!-- <li><a href="./components.html" title="">Components</a></li> -->
           <!-- <li>
@@ -75,58 +75,59 @@
 
 <div class="section-container border-section-container">
     <div class="container">
-            <div class="row">
-                <div class="col-md-12 section-container-spacer">
-                    <div class="text-center">
-                        <h2>Specializations</h2>
-                        <p> We specialize in optimizing and connecting all kinds of factory, <br>plants and sites for our clients’ major projects.  </p>
-                    </div>
-                </div>
-
-                <div class="col-md-3">
-                    <div class="fa-container">
-                        <i class="fa fa-comment-o fa-3x" aria-hidden="true"></i>
-                    </div>
-                    <div class="text-center">
-                        <h3>Simulation</h3>
-                    </div>
-                    <div>
-                        <p>Simulation tools for process design and simulation</p>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="fa-container">
-                        <i class="fa fa-heart-o fa-3x" aria-hidden="true"></i>
-                    </div>
-                    <div class="text-center">
-                        <h3>Engineering</h3>
-                    </div>
-                    <div>
-                        <p>Data management tools (Engineering Data Warehouse, Intelligent P&IDs, E&I Deliverables...) to efficiently control, collaborate and produce multi-discplinary engineering data and asset deliverables</p>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="fa-container">
-                        <i class="fa fa-bell-o fa-3x" aria-hidden="true"></i>
-                    </div>
-                    <div class="text-center">
-                        <h3>Design</h3>
-                    </div>
-                    <div>
-                        <p>Evergreen multi-discplinary 3D Model of the plant enabling rapidly generation accurate drawings and reports for both greenfield and browfield capital projects </p>
-                    </div>
-                </div>
-                <div class="col-md-3">
-                    <div class="fa-container">
-                        <i class="fa fa-comment-o fa-3x" aria-hidden="true"></i>
-                    </div>
-                    <div class="text-center">
-                        <h3>Execution</h3>
-                    </div>
-                    <div>
-                        <p>Enhanced process governance, best-in-class change management, and data-centric construction planning and execution.</p>
+        <div class="row">
+            <div class="col-md-12 section-container-spacer">
+                <div class="text-center">
+                    <h2>Specializations</h2>
+                    <p> We specialize in optimizing and connecting all kinds of factory, <br>plants and sites for our clients’ major projects.  </p>
                 </div>
             </div>
+
+            <div class="col-md-3">
+                <div class="fa-container">
+                    <i class="fa fa-comment-o fa-3x" aria-hidden="true"></i>
+                </div>
+                <div class="text-center">
+                    <h3>Simulation</h3>
+                </div>
+                <div>
+                    <p>Simulation tools for process design and simulation</p>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="fa-container">
+                    <i class="fa fa-heart-o fa-3x" aria-hidden="true"></i>
+                </div>
+                <div class="text-center">
+                    <h3>Engineering</h3>
+                </div>
+                <div>
+                    <p>Data management tools (Engineering Data Warehouse, Intelligent P&IDs, E&I Deliverables...) to efficiently control, collaborate and produce multi-discplinary engineering data and asset deliverables</p>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="fa-container">
+                    <i class="fa fa-bell-o fa-3x" aria-hidden="true"></i>
+                </div>
+                <div class="text-center">
+                    <h3>Design</h3>
+                </div>
+                <div>
+                    <p>Evergreen multi-discplinary 3D Model of the plant enabling rapidly generation accurate drawings and reports for both greenfield and browfield capital projects </p>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="fa-container">
+                    <i class="fa fa-comment-o fa-3x" aria-hidden="true"></i>
+                </div>
+                <div class="text-center">
+                    <h3>Execution</h3>
+                </div>
+                <div>
+                    <p>Enhanced process governance, best-in-class change management, and data-centric construction planning and execution.</p>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
 
