--- a/automation.html
+++ b/automation.html
@@ -42,7 +42,7 @@
           <li><a href="./index.html" title="" class="active">Home</a></li>
           <li><a href="./automation.html" title="">Automation</a></li>
           <!-- <li><a href="./engineering.html" title="">Engineering</a></li> -->
-          <li><a href="./manufacturing.html" title=""> Manufacturing</a></li>
+          <li><a href="./integration.html" title="">Integration</a></li>
           <li><a href="./contact.html" title="">Contact</a></li>
           <!-- <li><a href="./components.html" title="">Components</a></li> -->
           <!-- <li>
@@ -157,15 +157,8 @@
                   </div>
               </div>
           </div>
-
-
-
         </div>
-
     </div>
-
-
-
 </div>
 
 
