--- a/integration.html
+++ b/integration.html
@@ -59,10 +59,22 @@
   </nav>
 </header>
 
-
-
-
 <div class="section-container">
+  <div class="container">
+      <div class="row">
+        <!-- <div class="col-xs-12"> -->
+            <div class="text-center">
+                <h1>Integration</h1>
+            </div>
+            <div class="text-center">
+              <p>Our goal is to assist businesses by apply technologies and to build the intelligent enterprise of the future.
+                Our intent is not only to combine a range of real world and digital assets to help businesses navigate the AI but also, to provide business leaders with powerful insight in the emerging fields listed below.
+                </p>
+            </div>
+        <!-- </div> -->
+      </div>
+  </div>
+
     <div class="container">
         <div class="row section-container-spacer">
             <div class="col-xs-12">
@@ -75,60 +87,102 @@
                       <i class="fa fa-solid fa-industry-windows"></i>
                   </div>
                   <div class="text-center">
-                      <h3>Manufacturing</h3>
+                      <h3>Intelligent Automation</h3>
                   </div>
-                  <div>
-                      <p>An open engineering and runtime platform, leveraging digital workflow management
-                        capabilities, hardened for industrial use and designed for integration of business, manufacturing
-                        operations and production processes and data.</p>
+                  <!-- <div>
+                      <p>Our goal is to assist businesses by apply technologies and to build the intelligent enterprise of the future.
+                        Our intent is not only to combine a range of real world and digital assets to help businesses navigate the AI but also, to provide business leaders with powerful insight in the emerging fields listed below.
+                        </p>
+                  </div> -->
+                  <div class="row ">
+                    <div class="col-md-12">
+                        <ul class="features">
+                          <li>Artificial Intelligence</li>
+                          <li>Autonomous Vehicles</li>
+                          <li>Cyber Security & Big Data</li>
+                          <li>Digital Disruption & Transformation</li>
+                          <!-- <li>Intelligent Automation</li>
+                          <li>Machine Learning</li>
+                          <li>Robotic Process Automation</li> -->
+                      </ul>
+                    </div>
                   </div>
                 </div>
+
                 <div class="col-md-3">
                   <div class="fa-container">
                       <!-- <i class="fa fa-comment-o fa-3x" aria-hidden="true"></i> -->
                       <i class="fa fa-solid fa-industry-windows"></i>
                   </div>
                   <div class="text-center">
-                      <h3>Oil and Gas</h3>
+                      <h3>Petrochemicals and Chemical Industries </h3>
                   </div>
-                  <div>
-                      <p>An open engineering and runtime platform, leveraging digital workflow management
-                        capabilities, hardened for industrial use and designed for integration of business, manufacturing
-                        operations and production processes and data.</p>
+                  <!-- <div>
+                      <p>We typically assist our client to resolve challenges stated below through digital transformation 4.0. Our approach is to offer long term partnership for process optimization, while applying predictive maintenance to reduce unscheduled downtime, improve asset reliability, availability and performance which result to</p>
+                  </div> -->
+                  <div class="row ">
+                    <div class="col-md-12">
+                        <ul class="features">
+                          <li>Upskilling and workforce enablement</li>
+                          <li>Digital reliability platform</li>
+                          <li>Design for sustainable manufacturing</li>
+                      </ul>
+                    </div>
                   </div>
                 </div>
+
             <div class="col-md-3">
               <div class="fa-container">
                   <!-- <i class="fa fa-comment-o fa-3x" aria-hidden="true"></i> -->
                   <i class="fa fa-solid fa-industry-windows"></i>
               </div>
               <div class="text-center">
-                  <h3>Pharmaceutical</h3>
+                  <h3>Cloud</h3>
+                  <br>
               </div>
-              <div>
-                  <p>An open engineering and runtime platform, leveraging digital workflow management
-                    capabilities, hardened for industrial use and designed for integration of business, manufacturing
-                    operations and production processes and data.</p>
+              <!-- <div>
+                  <p>We typically assist our client to resolve challenges in cloud & Hybrid Cloud Services. Challenges such as listed below amongst others</p>
+              </div> -->
+              <div class="row ">
+                <div class="col-md-12">
+                    <ul class="features">
+                      <li>Driving sustainable operational improvements in the cloud</li>
+                      <li>Automated data capture and reporting leveraging IIoT devices and cloud</li>
+                      <li>Improved visibility to downtime</li>
+                      <!-- <li>Improved overall equipment effectiveness (OEE) for the plant</li> -->
+                  </ul>
+                </div>
               </div>
           </div>
+
           <div class="col-md-3">
             <div class="fa-container">
                 <!-- <i class="fa fa-comment-o fa-3x" aria-hidden="true"></i> -->
                 <i class="fa fa-solid fa-industry-windows"></i>
             </div>
             <div class="text-center">
-                <h3>CPG</h3>
+                <h3>Consumer-Packaged Goods/Food & Beverages</h3>
             </div>
-            <div>
-                <p>An open engineering and runtime platform, leveraging digital workflow management
-                  capabilities, hardened for industrial use and designed for integration of business, manufacturing
-                  operations and production processes and data.</p>
+            <!-- <div>
+                <p>We typically assist our client to resolve to transformed factories with industry 4.0 tools. The challenges include the underlined below</p>
+            </div> -->
+            <div class="row ">
+              <div class="col-md-12">
+                  <ul class="features">
+                    <li>Enable 500+ plants employees to share knowledge of equipment and work processes </li>
+                    <li>To get frontline workers up to speed on the essential skills</li>
+                    <!-- <li>Capture best practices and collaborate </li>
+                    <li>Improve production reliability for high-value baked goods</li> -->
+                    <!-- <li>Provide consistency of product quality related to variability</li>
+                    <li>Ensure food safety, while delivering to schedule and at cost</li> -->
+                </ul>
+              </div>
             </div>
+          </div>
         </div>
-            </div>
-        </div>
+      </div>
 
-        <div class="row">
+        <!-- <div class="row">
             <div class="col-md-4">
                 <div class="pricing-card pricing-primary">
                     <h3>Personal</h3>
@@ -177,10 +231,186 @@
                     <a href="contact.html" class="btn btn-primary" title="">Subscribe</a>
                 </div>
             </div>
-        </div>
+        </div> -->
 
     </div>
-</div>  
+
+    <div class="container">
+      <div class="row section-container-spacer">
+          <div class="col-xs-12">
+              <!-- <div class="text-center">
+                  <h1>Integration</h1>
+              </div> -->
+              <div class="col-md-3">
+                <div class="fa-container">
+                    <!-- <i class="fa fa-comment-o fa-3x" aria-hidden="true"></i> -->
+                    <i class="fa fa-solid fa-industry-windows"></i>
+                </div>
+                <div class="text-center">
+                    <h3>Energy</h3>
+                </div>
+                <div class="row ">
+                  <div class="col-md-12">
+                      <ul class="features">
+                        <li>Optimize operators’ efficiency and reliability during inspection activity</li>
+                        <li>Information silos made it difficult to find trusted asset information in a timely manner which hampered decision making</li>
+                        <li>Deep knowledge in designing, building and operating facilities</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-md-3">
+                <div class="fa-container">
+                    <!-- <i class="fa fa-comment-o fa-3x" aria-hidden="true"></i> -->
+                    <i class="fa fa-solid fa-industry-windows"></i>
+                </div>
+                <div class="text-center">
+                    <h3>EPC – Engineering, Procurement, & Construction</h3>
+                </div>
+                <div class="row ">
+                  <div class="col-md-12">
+                      <ul class="features">
+                        <li>Inefficient project execution and a desire to improve and modernize via digital transformation</li>
+                        <li>Leading in AWP implementation meant learning alongside project contractors and high dependency on internal and consulting AWP experts</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+
+          <div class="col-md-3">
+            <div class="fa-container">
+                <!-- <i class="fa fa-comment-o fa-3x" aria-hidden="true"></i> -->
+                <i class="fa fa-solid fa-industry-windows"></i>
+            </div>
+            <div class="text-center">
+                <h3>Infrastructure</h3>
+                <br>
+            </div>
+            <div class="row ">
+              <div class="col-md-12">
+                  <ul class="features">
+                    <li>More effectively manage the city’s water consumption for both irrigation and public use</li>
+                    <li>Automated data capture and reporting leveraging IIoT devices and cloud</li>
+                    <li>Quality of life, smart growth and city resilience</li>
+                </ul>
+              </div>
+            </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="fa-container">
+              <!-- <i class="fa fa-comment-o fa-3x" aria-hidden="true"></i> -->
+              <i class="fa fa-solid fa-industry-windows"></i>
+          </div>
+          <div class="text-center">
+              <h3>Manufacturing</h3>
+          </div>
+          <div class="row ">
+            <div class="col-md-12">
+                <ul class="features">
+                  <li>Boost plant and energy efficiency by introducing IIoT technologies that reduce downtime  </li>
+                  <li>Unlocking data silos and mobilize staff with increased plant-wide visualization</li>
+                  <li>Reduce process variability, create standardization to improve efficiency</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    </div>
+
+    <div class="container">
+      <div class="row section-container-spacer">
+          <div class="col-xs-12">
+              <!-- <div class="text-center">
+                  <h1>Integration</h1>
+              </div> -->
+              <div class="col-md-3">
+                <div class="fa-container">
+                    <!-- <i class="fa fa-comment-o fa-3x" aria-hidden="true"></i> -->
+                    <i class="fa fa-solid fa-industry-windows"></i>
+                </div>
+                <div class="text-center">
+                    <h3>Marine</h3>
+                </div>
+                <div class="row ">
+                  <div class="col-md-12">
+                      <ul class="features">
+                        <li>Need for fast and detailed digital visualizations of physical assets</li>
+                        <li>Streamline vessel design</li>
+                        <li>Minimize rework</li>
+                        <li>Large amounts of data demand accuracy</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-md-3">
+                <div class="fa-container">
+                    <!-- <i class="fa fa-comment-o fa-3x" aria-hidden="true"></i> -->
+                    <i class="fa fa-solid fa-industry-windows"></i>
+                </div>
+                <div class="text-center">
+                    <h3>Metals, Mining & Materials</h3>
+                </div>
+                <div class="row ">
+                  <div class="col-md-12">
+                      <ul class="features">
+                        <li>Three separate mine locations with complicated cross-site collaboration</li>
+                        <li>To ensure high health and safety standards were maintained</li>
+                        <li>To streamline capex and drive optimizations throughout the mining value chain</li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+
+          <div class="col-md-3">
+            <div class="fa-container">
+                <!-- <i class="fa fa-comment-o fa-3x" aria-hidden="true"></i> -->
+                <i class="fa fa-solid fa-industry-windows"></i>
+            </div>
+            <div class="text-center">
+                <h3>Pharma & Life Sciences</h3>
+                <br>
+            </div>
+            <div class="row ">
+              <div class="col-md-12">
+                  <ul class="features">
+                    <li>Reduce process variability, create standardization to improve efficiency</li>
+                    <li>Unify data and analytics to enable a complete view of the medicines manufacturing process</li>
+                    <li>Use information and predictive analytics to pro-actively manage operational maintenance</li>
+                </ul>
+              </div>
+            </div>
+        </div>
+
+        <div class="col-md-3">
+          <div class="fa-container">
+              <!-- <i class="fa fa-comment-o fa-3x" aria-hidden="true"></i> -->
+              <i class="fa fa-solid fa-industry-windows"></i>
+          </div>
+          <div class="text-center">
+              <h3>Power & Utilities</h3>
+          </div>
+          <div class="row ">
+            <div class="col-md-12">
+                <ul class="features">
+                  <li>Reduce overall operations, maintenance and capital spending, while maintaining high availability within plants and continuously and efficiently serving customers</li>
+                  <li>Achieve Operations excellence to empower grid operators to make faster, closed-loop decisions, provide better power quality and minimal outages while maximizing the ROI on assets.</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    </div>
+
+</div> 
+
+
 
 
 <footer>
